change ws position + fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,9 @@ img {
 }
 
 /* VIDEO */
+main {
+  overflow: hidden;
+}
 
 #landing-page .ms_video_box {
   position: relative;
@@ -113,7 +116,8 @@ img {
   height: 100vh;
 }
 
-#video-showreel, iframe {
+#video-showreel,
+iframe {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -157,13 +161,15 @@ iframe {
 }
 
 @media (min-aspect-ratio: 16/9) {
-  #video-showreel, iframe {
+  #video-showreel,
+  iframe {
     /* height = 100 * (9 / 16) = 56.25 */
     height: 56.25vw;
   }
 }
 @media (max-aspect-ratio: 16/9) {
-  #video-showreel, iframe {
+  #video-showreel,
+  iframe {
     /* width = 100 / (9 / 16) = 177.777777 */
     width: 177.78vh;
   }
